--- a/app/src/main/res/layout/activity_pet_care_provider_profile.xml
+++ b/app/src/main/res/layout/activity_pet_care_provider_profile.xml
@@ -28,13 +28,14 @@
             <ImageView
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                app:srcCompat="@drawable/petcareprovider_profilepicture"
-                android:id="@+id/providerPic_img"
-                android:background="@color/nice_light_gray"
-                android:padding="2dp"
+                android:src="@drawable/user1"
+                android:id="@+id/petCareProviderPhoto_img"
+                android:background="@color/colorAccent"
+                android:padding="10dp"
                 android:cropToPadding="true"
                 android:scaleType="centerCrop"
-                android:layout_margin="10dp" />
+                android:layout_margin="10dp"
+                android:onClick="showProfilePhoto"/>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -45,7 +46,7 @@
                 android:layout_gravity="center">
 
                 <TextView
-                    android:id="@+id/petCareProvider_location_txtv"
+                    android:id="@+id/petCareProviderLocation_txtv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="City, Country"
@@ -57,7 +58,7 @@
                     android:drawableLeft="@drawable/ic_location_on_black_24dp" />
 
                 <TextView
-                    android:id="@+id/petCareProvider_availability_txtv"
+                    android:id="@+id/petCareProviderAvailability_txtv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="PART-TIME pet sitter"
@@ -66,7 +67,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/petCareProvider_experienceYears_txtv"
+                    android:id="@+id/petCareProviderExperienceYears_txtv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="5 YRS EXP."
@@ -75,7 +76,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/petCareProvider_payRate_txtv"
+                    android:id="@+id/petCareProviderAverageRatePerHour_txtv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="$10-15 HOURLY RATE"
@@ -84,135 +85,149 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/petCareProvider_createDate_txtv"
+                    android:id="@+id/petCareProviderCreateDate_txtv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Joined In 12/12/2012"
+                    android:text="Member Since Jan 2012"
                     android:textColor="@color/primaryText"
                     android:layout_marginTop="5dp"
                     android:textSize="16sp" />
             </LinearLayout>
         </LinearLayout>
 
-        <ImageView
+        <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
             android:background="@android:color/darker_gray" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Meet 'Name'"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp"
-            android:fontFamily="serif"
-            android:layout_marginTop="15dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp" />
-
-        <TextView
-            android:id="@+id/petCareProvider_profileDescription_txtv"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:background="@color/white"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:padding="10dp"
-            android:elevation="2dp"
-            android:text="hello everyone, \nI'm a pet sitter, I provider care for dogs and cats. blabla..." />
-
-        <TextView
-            android:id="@+id/petCareProvider_serviceProvidedFor_txtv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Provides Care For"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp"
-            android:fontFamily="serif"
             android:layout_marginTop="15dp"
             android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp" />
+            android:layout_marginEnd="10dp"
+            android:elevation="2dp">
+            <TextView
+                android:id="@+id/petCareProviderName_txtv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Meet 'Name'"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp"
+                android:fontFamily="serif"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"/>
+            <TextView
+                android:id="@+id/petCareProviderProfileDescription_txtv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text="hello everyone, \nI'm a pet sitter, I provider care for dogs and cats. blabla..." />
 
-        <TextView
-            android:id="@+id/petCareProvider_serviceProvided_txtv"
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:background="@color/white"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:padding="8dp"
-            android:text="Cats, Dogs, Birds, Horses, Small Animals, Other pets"
-            android:drawableStart="@drawable/checkmark"
-            android:drawableLeft="@drawable/checkmark"
-            android:drawablePadding="6dp"
-            android:elevation="2dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Care Services Provided"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp"
-            android:fontFamily="serif"
             android:layout_marginTop="15dp"
             android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp" />
+            android:layout_marginEnd="10dp"
+            android:elevation="2dp">
+            <TextView
+                android:id="@+id/petCareProvider_serviceProvidedFor_txtv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Provides Care For"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp"
+                android:fontFamily="serif"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"/>
+            <TextView
+                android:id="@+id/petCareProviderServiceProvidedFor_txtv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:padding="8dp"
+                android:text="Cats, Dogs, Birds, Horses, Small Animals, Other pets"
+                android:drawableStart="@drawable/checkmark"
+                android:drawableLeft="@drawable/checkmark"
+                android:drawablePadding="8dp" />
+        </LinearLayout>
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:background="@color/white"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:padding="8dp"
-            android:text="Pet Sitting, Pet Walking, Grooming, Training"
-            android:drawableStart="@drawable/checkmark"
-            android:drawableLeft="@drawable/checkmark"
-            android:drawablePadding="6dp"
-            android:elevation="2dp" />
+            android:elevation="2dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Care Services Provided"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp"
+                android:fontFamily="serif"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"/>
+            <TextView
+                android:id="@+id/petCareProviderServiceProvided_txtv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:padding="8dp"
+                android:text="Pet Sitting, Pet Walking, Grooming, Training"
+                android:drawableStart="@drawable/checkmark"
+                android:drawableLeft="@drawable/checkmark"
+                android:drawablePadding="8dp"/>
+        </LinearLayout>
 
-        <ImageView
+        <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
             android:background="@android:color/darker_gray"
             android:layout_marginTop="15dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Contact Pet Care Provider"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/colorPrimaryDark"
-            android:textSize="20sp"
-            android:fontFamily="serif"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:layout_margin="5dp"
+            android:layout_margin="10dp"
             android:background="@android:color/background_light"
             android:elevation="2dp"
             android:orientation="vertical">
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Contact Pet Care Provider"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="20sp"
+                android:fontFamily="serif"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"/>
             <Button
-                android:id="@+id/call_pcp_btn"
+                android:id="@+id/petCareProviderPhone_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="contactSeller"
+                android:onClick="contactPetCareProvider"
                 android:text="Phone: +966123456789"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp" />
 
             <Button
-                android:id="@+id/email_pcp_btn"
+                android:id="@+id/petCareProviderEmail_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="contactSeller"
+                android:onClick="contactPetCareProvider"
                 android:text="Email: selleremail@email.com"
                 android:layout_margin="10dp" />
         </LinearLayout>
