--- a/app/src/main/res/menu/user_profile_toolbar.xml
+++ b/app/src/main/res/menu/user_profile_toolbar.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_edit"
+        android:id="@+id/action_edit_user_profile"
         android:title="Edit"
-        app:showAsAction="never"/>
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/edit"/>
 
 </menu>
