--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,6 +8,7 @@
     android:padding="16dp"
     android:layout_gravity="center"
     android:gravity="center"
+    android:background="@drawable/my_app_background2"
     tools:context="com.ahmedbass.mypetfriend.MainActivity"
     android:baselineAligned="false">
 
@@ -18,7 +19,7 @@
         android:layout_weight="1">
 
         <ImageButton
-            android:id="@+id/my_pets_btn"
+            android:id="@+id/myPets_btn"
             style="@style/iconStyle_MainScreen"
             android:src="@drawable/ic_my_pets"
             android:layout_gravity="center"
@@ -48,7 +49,7 @@
         android:orientation="vertical">
 
         <ImageButton
-            android:id="@+id/pet_places_btn"
+            android:id="@+id/petPlaces_btn"
             style="@style/iconStyle_MainScreen"
             android:src="@drawable/ic_find_pet_places"
             android:layout_gravity="center"
@@ -108,7 +109,7 @@
         android:orientation="vertical">
 
         <ImageButton
-            android:id="@+id/pet_shop_btn"
+            android:id="@+id/petMarket_btn"
             style="@style/iconStyle_MainScreen"
             android:src="@drawable/ic_pet_shop"
             android:layout_gravity="center"
