--- a/app/src/main/res/layout/activity_add_edit_pet.xml
+++ b/app/src/main/res/layout/activity_add_edit_pet.xml
@@ -43,7 +43,7 @@
                 android:layout_column="1"
                 android:hint="Pet name"
                 android:layout_gravity="fill"
-                android:inputType="textAutoComplete|textAutoCorrect|textCapWords" />
+                android:inputType="textAutoCorrect|textCapWords" />
 
             <TextView
                 android:layout_width="wrap_content"
