--- a/app/src/main/res/layout/activity_advert.xml
+++ b/app/src/main/res/layout/activity_advert.xml
@@ -16,7 +16,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin">
 
         <ImageView
-            android:id="@+id/advert_images"
+            android:id="@+id/advertPhoto_img"
             android:layout_width="wrap_content"
             android:layout_height="200dp"
             android:src="@drawable/dog_img"
@@ -33,7 +33,7 @@
             android:layout_margin="5dp"
             android:scaleX=".8" />
 
-        <ImageView
+        <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
             android:background="@android:color/darker_gray"
@@ -55,7 +55,7 @@
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:rowCount="7"
+            android:rowCount="8"
             android:columnCount="2"
             android:layout_gravity="center"
             android:background="@android:color/background_light"
@@ -64,12 +64,21 @@
             android:layout_margin="5dp">
 
             <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Advert Type: "
+                android:layout_margin="5dp"
+                android:layout_row="0"
+                android:layout_column="0" />
+
+            <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Price: "
                 android:layout_margin="5dp"
-                android:layout_row="0"
+                android:layout_row="1"
                 android:layout_column="0" />
 
             <TextView
@@ -78,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:text="Pet Type: "
                 android:layout_margin="5dp"
-                android:layout_row="1"
+                android:layout_row="2"
                 android:layout_column="0" />
 
             <TextView
@@ -87,7 +96,7 @@
                 android:text="Pet Breed:"
                 android:id="@+id/textView5"
                 android:layout_margin="5dp"
-                android:layout_row="2"
+                android:layout_row="3"
                 android:layout_column="0" />
 
             <TextView
@@ -96,7 +105,7 @@
                 android:text="Pets Age:"
                 android:id="@+id/textView6"
                 android:layout_margin="5dp"
-                android:layout_row="3"
+                android:layout_row="4"
                 android:layout_column="0" />
 
 
@@ -106,7 +115,7 @@
                 android:text="Microchipped:"
                 android:id="@+id/textView7"
                 android:layout_margin="5dp"
-                android:layout_row="4"
+                android:layout_row="5"
                 android:layout_column="0" />
 
             <TextView
@@ -115,23 +124,23 @@
                 android:text="Neutered:"
                 android:id="@+id/textView8"
                 android:layout_margin="5dp"
-                android:layout_row="5"
-                android:layout_column="0" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Vaccinations:"
-                android:id="@+id/textView9"
-                android:layout_margin="5dp"
                 android:layout_row="6"
                 android:layout_column="0" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/price_txt"
-                android:text="Enter Price"
+                android:text="Vaccinated:"
+                android:id="@+id/textView9"
+                android:layout_margin="5dp"
+                android:layout_row="7"
+                android:layout_column="0" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/advertType_txtv"
+                android:text="Enter Advert Type"
                 android:layout_margin="5dp"
                 android:layout_row="0"
                 android:layout_column="1"
@@ -140,8 +149,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/pet_type_txt"
-                android:text="Enter Pet Type"
+                android:id="@+id/price_txtv"
+                android:text="Enter Price"
                 android:layout_margin="5dp"
                 android:layout_row="1"
                 android:layout_column="1"
@@ -150,17 +159,18 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/pet_breed_txt"
-                android:text="Enter Pet Breed"
+                android:id="@+id/petType_txtv"
+                android:text="Enter Pet Type"
                 android:layout_margin="5dp"
                 android:layout_row="2"
-                android:layout_column="1" />
+                android:layout_column="1"
+                android:ellipsize="end" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/pet_Age_txt"
-                android:text="Enter Pets Age"
+                android:id="@+id/petBreed_txtv"
+                android:text="Enter Pet Breed"
                 android:layout_margin="5dp"
                 android:layout_row="3"
                 android:layout_column="1" />
@@ -168,8 +178,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/pet_microchipped_txt"
-                android:text="Is Microchipped?"
+                android:id="@+id/petAge_txtv"
+                android:text="Enter Pets Age"
                 android:layout_margin="5dp"
                 android:layout_row="4"
                 android:layout_column="1" />
@@ -177,8 +187,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/pet_neutered_txt"
-                android:text="Is Neutered?"
+                android:id="@+id/isPetMicrochipped_txtv"
+                android:text="Is Microchipped?"
                 android:layout_margin="5dp"
                 android:layout_row="5"
                 android:layout_column="1" />
@@ -186,17 +196,26 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/pet_vaccination_txt"
-                android:text="Is Vaccinated?"
+                android:id="@+id/isPetNeutered_txtv"
+                android:text="Is Neutered?"
                 android:layout_margin="5dp"
                 android:layout_row="6"
+                android:layout_column="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/isPetVaccinated_txtv"
+                android:text="Is Vaccinated?"
+                android:layout_margin="5dp"
+                android:layout_row="7"
                 android:layout_column="1" />
         </GridLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Full Details"
+            android:text="Full Advert Details"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20sp"
@@ -206,7 +225,7 @@
             android:layout_marginEnd="5dp" />
 
         <TextView
-            android:id="@+id/advert_details_txtv"
+            android:id="@+id/advertDetails_txtv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
@@ -218,7 +237,7 @@
               \nwrite anything here, really it's a long paragraph."
             android:elevation="2dp" />
 
-        <ImageView
+        <View
             android:layout_width="match_parent"
             android:layout_height="1.5dp"
             android:background="@android:color/darker_gray"
@@ -247,17 +266,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/seller_username_txtv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Seller Name"
-                android:textColor="@color/primaryText"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp" />
-
-            <TextView
-                android:id="@+id/seller_location_txtv"
+                android:id="@+id/advertLocation_txtv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="City, Country"
@@ -267,7 +276,7 @@
                 android:drawablePadding="3dp" />
 
             <Button
-                android:id="@+id/call_seller_btn"
+                android:id="@+id/sellerPhone_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="contactSeller"
@@ -277,7 +286,7 @@
                 android:layout_marginTop="10dp" />
 
             <Button
-                android:id="@+id/email_seller_btn"
+                android:id="@+id/sellerEmail_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="contactSeller"
