--- a/app/src/main/res/layout/fragment_pet_schedule.xml
+++ b/app/src/main/res/layout/fragment_pet_schedule.xml
@@ -46,7 +46,7 @@
     <ListView
         android:id="@+id/activitiesOfDay_listview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:drawSelectorOnTop="true" />
