--- a/app/src/main/res/layout/list_item_schedule_activity.xml
+++ b/app/src/main/res/layout/list_item_schedule_activity.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="5dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
-        android:src="@drawable/paw_default" />
+        android:src="@drawable/paw_symbol" />
 
     <TextView
         android:id="@+id/scheduleActivityType_txtv"
