--- a/app/src/main/res/menu/user_actions_menu.xml
+++ b/app/src/main/res/menu/user_actions_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/action_save"
+        android:id="@+id/action_favorite"
         android:title="Add to Favorite"
         app:showAsAction="never" />
 </menu>
